--- a/server/project/distribution/src/static/bj/index.html
+++ b/server/project/distribution/src/static/bj/index.html
@@ -1,16 +1,68 @@
-<!DOCTYPE html><!--Licensed to the Apache Software Foundation (ASF) under one
- or more contributor license agreements. See the NOTICE file
- distributed with this work for additional information
- regarding copyright ownership. The ASF licenses this file
- to you under the Apache License, Version 2.0 (the
- "License"); you may not use this file except in compliance
- with the License. You may obtain a copy of the License at
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <title>&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;</title>
+    <meta charset="UTF-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta http-equiv="Cache-Control" content="no-transform">
+    <meta content="&#x9EBB;&#x5C06;,&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;,&#x7EA6;&#x9EBB;&#x5C06;" name="keywords">
+    <meta content="&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;" name="description">
+    <meta content="&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;" name="author">
+    <meta content="2014-2016 bjmajiang.com Inc." name="copyright">
+    <meta content="&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;" name="application-name">
+    <meta content="&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;" name="msapplication-tooltip">
+    <meta name="full-screen" content="true">
+    <meta content="name=&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;;action-uri=http://www.bjmajiang.com;icon-uri=http://www.bjmajiang.com/favicon.ico" name="msapplication-task">
+    <meta name="laya" logoimg="icon/144.png" logobkcolor="#ffffff" screenorientation="landscape" cacheid="fffffffff">
 
- http://www.apache.org/licenses/LICENSE-2.0
+    <meta name="apple-mobile-web-app-title" content="&#x5E7F;&#x4E1C;&#x9EBB;&#x5C06;">
+    <!-- 添加到主屏后的标题（iOS 6 新增） -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- 设置苹果工具栏颜色 -->
 
- Unless required by applicable law or agreed to in writing,
- software distributed under the License is distributed on an
- "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- KIND, either express or implied. See the License for the
- specific language governing permissions and limitations
- under the License.--><html><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"><meta name="format-detection" content="telephone=no"><meta name="msapplication-tap-highlight" content="no"><meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"><link rel="stylesheet" type="text/css" href="css/index.css"><title>Hello World</title></head><body style="margin:0;overflow:hidden;overflow-x:hidden;overflow-y:hidden;background-color: #000;"><script type="text/javascript" src="cordova.js"></script><script>window.gameInit=function(i,n){window.$initCallback=n.bind(i)};</script><script src="myLaya.min.js" loader="laya"></script><script>window.$initCallback&&window.$initCallback();</script></body></html>
+    <!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
+    <meta name="HandheldFriendly" content="true">
+    <!-- 微软的老式浏览器 -->
+    <meta name="MobileOptimized" content="320">
+    <!-- uc强制竖屏 -->
+    <meta name="screen-orientation" content="landscape">
+    <!-- QQ强制竖屏 -->
+    <meta name="x5-orientation" content="landscape">
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes">
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true">
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application">
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app">
+    <!-- windows phone 点击无高光 -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/icon/60.png" type="image/png">
+
+    <link rel="apple-touch-icon" href="/icon/57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/icon/72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/icon/114.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/icon/144.png">
+</head>
+<body style="margin:0;overflow:hidden;overflow-x:hidden;overflow-y:hidden;background-color: #000;">
+<script>
+    window.gameInit = function (obj, initCallback) {
+        window.$initCallback = initCallback.bind(obj);
+    }
+</script>
+<script src="myLaya.min.js" loader="laya"></script>
+<script>
+    if (window.$initCallback) {
+        window.$initCallback();
+    }
+</script>
+</body>
+</html>
